# bunz

./: README.md  bunz.cabal
app/: Main.hs
src/: Beautifier.hs  Character.hs
test/: BeautifierSpec.hs  CharacterSpec.hs
