name:                bunz
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bunz#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Character
                     , Beautifier
  build-depends:       base >= 4.7 && < 5
                     , text == 1.2.2.2
  default-language:    Haskell2010

executable bunz-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bunz
  default-language:    Haskell2010

test-suite bunz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainSpec.hs
  other-modules:       CharacterSpec
                     , BeautifierSpec
  build-depends:       base
                     , bunz
                     , doctest >= 0.11
                     , hspec == 2.4.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bunz
